# Eletromidia-AI-Driven-Dashboard

./: .env.example  .firebaserc  .gitignore  .gitlab-ci.yml  .golangci.yml  README.md  firebase.json  text.txt
.firebase/: hosting.bWlkaWEtaW4tZGEtaG91c2U.cache  hosting.c3JjL2Zyb250ZW5kL2Rpc3Q.cache
.github/workflows/: deploy-docs.yml
.gitlab/ci/: actions-rules.yml  branch-rules.yml  frontend.yml  go.yml  iac.yml  python.yml  release.yml  rust.yml  sync-branches.yml  variables.yml
.gitlab/issue_templates/: Bug.md  Feature.md
.gitlab/merge_request_templates/: Default.md
docs/: .markdownlint.json  next.config.mjs  package-lock.json  package.json
docs/content/docs/: index.mdx  meta.json
docs/src/lib/: layout.shared.tsx
releases/: 0.1.0  0.2.0  0.3.0  0.4.0  0.5.0  draft-patch
src/: .gitignore  docker-compose.yml
src/firebase-proxy/: Makefile  index.js  package.json
src/front/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/front/src/: App.jsx  styles.css
src/frontend/: .dockerignore  .env.example  Dockerfile  biome.json  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/frontend/src/: App.tsx  AuthContext.tsx  apiClient.ts  firebase.ts  (+2 more)
src/kubernetes/: .env.example  Makefile
src/loadtest/: Dockerfile  Makefile  README.md  loadtest.js
src/redis-writer/: Dockerfile  go.mod
src/rust-producer/: Cargo.toml
src/services/Auth-middleware/: .env.example  Cargo.toml
src/services/Auth-middleware/src/: handlers.rs  main.rs  models.rs
src/services/Auth-middleware/src/jwt/: jwt.rs  jwt_middleware.rs  mod.rs
src/services/agent/: .dockerignore  .env.example  Dockerfile  Makefile  analyze_campaign.py  api.py  data.py  llm.py  main.py  pyproject.toml  requirements.txt
src/services/agent/core/: agent.py  answer.py  bigquery_client.py  llm.py  llm_provider.py  prompt.py  report.py  summarization.py
src/services/agent/core/tools/: bigquery.py  campaign.py  geocoding.py  looker.py  metadata.py
src/services/agent/scripts/: enrich.py
src/services/agent/tests/: conftest.py  test_answer.py  test_api.py  test_bigquery_tool.py  test_campaign.py  test_geocoding.py  test_llm.py  test_looker.py  test_report.py  test_summarization.py
src/services/auth-middleware/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  README.md
src/services/auth-middleware/src/: handlers.rs  main.rs  models.rs
src/services/auth-middleware/src/auth/: firebase.rs  iam.rs  middleware.rs  mod.rs
src/services/rust-producer/: Cargo.toml  Makefile  README.md  curl.txt
src/services/rust-producer/services/csv-kafka-producer/: .env.example  Cargo.toml  Dockerfile
src/services/rust-producer/services/csv-kafka-producer/src/: main.rs  models.rs
src/services/rust-producer/services/csv-kafka-producer/src/mods/: csv.rs  test.rs
(+300 files in other folders)
