[package]
name = "auth-access"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.0"
jwt = "0.16.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
uuid = { version = "1.10", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
google-cloud-resourcemanager-v3 = "1.6"
google-cloud-iam-v1 = "1.6"
google-cloud-auth = "0.16"
moka = { version = "0.12", features = ["future"] }
base64 = "0.22"
