[workspace]
members = [
    "services/csv-kafka-producer"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Midia in da house Team"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.dev-dependencies]
rustfmt = "0.10"