[package]
name = "csv-kafka-producer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rdkafka = { version = "0.39", features = ["cmake-build", "zstd"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
